[gd_scene load_steps=3 format=3 uid="uid://d2oh4a88llwdg"]

[ext_resource type="Script" uid="uid://eqa4jp3xipnf" path="res://scenes/Chapter4/Scene1/MinigameChapter4Scene1/password.gd" id="1_ulxp3"]
[ext_resource type="Texture2D" uid="uid://brry7rdwawx3g" path="res://assets/ui/close.png" id="2_a0a78"]

[node name="Password" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_ulxp3")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -100.0
offset_right = 372.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="hint" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Hint:  This is date! Month and Year."

[node name="Label" type="Label" parent="AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "PASSWORD:"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Digit1" type="LineEdit" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
alignment = 1

[node name="Digit2" type="LineEdit" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
alignment = 1

[node name="Digit3" type="LineEdit" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
alignment = 1

[node name="Digit4" type="LineEdit" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
alignment = 1

[node name="Digit5" type="Panel" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer/Digit5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Digit6" type="Panel" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer/Digit6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubmitButton" type="Button" parent="AspectRatioContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "âž¤"

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
offset_left = 128.0
offset_top = 128.0
offset_right = 192.0
offset_bottom = 192.0
focus_mode = 0
flat = true

[node name="TextureRect" type="TextureRect" parent="CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a0a78")
expand_mode = 1

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
